Feat: Refactor model classes to follow sonarqube standards